fixed StudentTest. List.of changed to Arrays.asList